@@ -34,94 +34,6 @@
 #define MIN(a, b)  (((a) < (b)) ? (a) : (b))
 #endif /* MIN */
 
-/* goes into art_uta_ops */
-ArtUta *
-art_uta_union (ArtUta *uta1, ArtUta *uta2)
-{
-  ArtUta *uta;
-  int x0, y0, x1, y1;
-  int x, y;
-  int ix, ix1, ix2;
-  ArtUtaBbox bb, bb1, bb2;
-
-  x0 = MIN(uta1->x0, uta2->x0);
-  y0 = MIN(uta1->y0, uta2->y0);
-  x1 = MAX(uta1->x0 + uta1->width, uta2->x0 + uta2->width);
-  y1 = MAX(uta1->y0 + uta1->height, uta2->y0 + uta2->height);
-  uta = art_uta_new (x0, y0, x1, y1);
-
-  /* could move the first two if/else statements out of the loop */
-  ix = 0;
-  for (y = y0; y < y1; y++)
-    {
-      ix1 = (y - uta1->y0) * uta1->width + x0 - uta1->x0;
-      ix2 = (y - uta2->y0) * uta2->width + x0 - uta2->x0;
-      for (x = x0; x < x1; x++)
-	{
-	  if (x < uta1->x0 || y < uta1->y0 ||
-	      x >= uta1->x0 + uta1->width || y >= uta1->y0 + uta1->height)
-	    bb1 = 0;
-	  else
-	    bb1 = uta1->utiles[ix1];
-
-	  if (x < uta2->x0 || y < uta2->y0 ||
-	      x >= uta2->x0 + uta2->width || y >= uta2->y0 + uta2->height)
-	    bb2 = 0;
-	  else
-	    bb2 = uta2->utiles[ix2];
-
-	  if (bb1 == 0)
-	    bb = bb2;
-	  else if (bb2 == 0)
-	    bb = bb1;
-	  else
-	    bb = ART_UTA_BBOX_CONS(MIN(ART_UTA_BBOX_X0(bb1),
-				       ART_UTA_BBOX_X0(bb2)),
-				   MIN(ART_UTA_BBOX_Y0(bb1),
-				       ART_UTA_BBOX_Y0(bb2)),
-				   MAX(ART_UTA_BBOX_X1(bb1),
-				       ART_UTA_BBOX_X1(bb2)),
-				   MAX(ART_UTA_BBOX_Y1(bb1),
-				       ART_UTA_BBOX_Y1(bb2)));
-	  uta->utiles[ix] = bb;
-	  ix++;
-	  ix1++;
-	  ix2++;
-	}
-    }
-  return uta;
-}
-
-#if 0
-static void
-art_uta_add_point (ArtUta *uta, int x, int y)
-{
-  int ix;
-  int xt, yt;
-  int xf, yf;
-  int bb;
-
-  xt = (x >> ART_UTILE_SHIFT) - uta->x0;
-  yt = (y >> ART_UTILE_SHIFT) - uta->y0;
-  /* Should this expand the uta? Or should it be better practice to
-     compute the bounding box ahead of time? */
-  if (xt < 0 || xt >= uta->width || yt < 0 || yt >= uta->height)
-    art_die ("uta_add_point: bounds check\n");
-  xf = x & (ART_UTILE_SIZE - 1);
-  yf = y & (ART_UTILE_SIZE - 1);
-  ix = yt * uta->width + xt;
-  bb = uta->utiles[ix];
-  if (bb == 0)
-    bb = ART_UTA_BBOX_CONS(xf, yf, xf + 1, yf + 1);
-  else
-    bb = ART_UTA_BBOX_CONS(MIN(ART_UTA_BBOX_X0(bb), xf),
-		       MIN(ART_UTA_BBOX_Y0(bb), yf),
-		       MAX(ART_UTA_BBOX_X1(bb), xf + 1),
-		       MAX(ART_UTA_BBOX_Y1(bb), yf + 1));
-  uta->utiles[ix] = bb;
-}
-#endif
-
 /* Add the line to the uta, and also perform the basic step in rendering
    the interior of a vpath. Specifically, for each time that a line
    crosses a horizontal microtile grid line, increment (if y1 > y0,
